test/unit/components/dialogue/scripts/invalid/header-too-much.dscript
Bob confused M label1 POGCHAMP
What's that fifth element there?
